--- a/src/app/organizador/organizador-list/organizador-list.component.html
+++ b/src/app/organizador/organizador-list/organizador-list.component.html
@@ -36,7 +36,7 @@
                   <dd style="text-align: center;" routerLink="/organizadors/{{organizador.id}}" >{{organizador.nombre}}</dd>
               </td>
               <td>
-                  <button class="btn btn-primary" (click)="showHideEdit(organizador.id)"><span class="fa fa-pencil"></span></button>
+                  <button class="btn btn-primary" (click)="showHideEdit(organizador.id)"><span class="far fa-edit"></span></button>
               </td>
           </tr>
       </tbody>
