--- a/src/app/ronda/ronda-detail/ronda-detail.component.html
+++ b/src/app/ronda/ronda-detail/ronda-detail.component.html
@@ -5,10 +5,10 @@
           <div class="col">
               <dl>     
                   <dt style="background-color:rgb(247, 247, 247); text-align: center">Numero Ronda</dt>
-                  <dd style="background-color:rgb(247, 247, 247); text-align: center">{{rondaDetail.concurso.id}}</dd>
+                  <dd style="background-color:rgb(247, 247, 247); text-align: center">{{rondaDetail.numRonda}}</dd>
               </dl>
           </div>
-          <button class="btn btn-primary" routerLink="/concursos/{{concurso.id}}">Regresar</button>
       </div>
   </div>
+  <button class="btn btn-primary" routerLink="/concursos/100">Regresar</button>
 </div>
