--- a/src/app/ronda/ronda-list/ronda-list.component.html
+++ b/src/app/ronda/ronda-list/ronda-list.component.html
@@ -37,7 +37,7 @@
                 <dd style="text-align: center;" routerLink="/rondas/{{ronda.id}}" >{{ronda.numRonda}}</dd>
               </td> 
               <td>
-                  <button class="btn btn-primary" (click)="showHideEdit(ronda.id)"><span class="far fa-pencil"></span></button>
+                  <button class="btn btn-primary" (click)="showHideEdit(ronda.id)"><span class="far fa-edit"></span></button>
               </td>  
         </tr>
     </tbody>
