--- a/src/app/concurso/concurso-detail/concurso-detail.component.html
+++ b/src/app/concurso/concurso-detail/concurso-detail.component.html
@@ -1,3 +1,4 @@
+<button class="btn btn-primary" routerLink="/concursos/list">Regresar</button>
 <div class="container-fluid">
 
     <h1> {{concursoDetail.tema}} </h1>
@@ -39,4 +40,6 @@
             </div>
         </div>
     </section>
+
+   
 </div>
