--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,25 +7,25 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-                <li class ="nav-item"><a class ="nav-link" id="calificacion-navbar-item" routerLink="/calificaciones/list">Calificaciones</a></li>  
+                <li class ="nav-item"><a class ="nav-link" id="calificacion-navbar-item" routerLink="/calificaciones/list" *ngxPermissionsOnly="['ADMIN']">Calificaciones</a></li>  
                 &nbsp;
-                <li class ="nav-item"><a class ="nav-link" id="jurado-navbar-item" routerLink="/jurados/list">Jurados</a></li>
+                <li class ="nav-item"><a class ="nav-link" id="jurado-navbar-item" routerLink="/jurados/list"*ngxPermissionsOnly="['ADMIN']">Jurados</a></li>
                 &nbsp;
                 <li class ="nav-item"><a class ="nav-link" id="fotografo-navbar-item" routerLink="/fotografos/list">Fotografos</a></li>  
                 &nbsp;
                 <li class ="nav-item"><a class ="nav-link" id="interes-fotografico-navbar-item" routerLink="/interesFotograficos/list">Intereses Fotograficos</a></li>  
                 &nbsp;
-                <li class ="nav-item"><a class ="nav-link" id="clienteItem" routerLink="/clientes/list">Clientes</a></li>  
+                <li class ="nav-item"><a class ="nav-link" id="clienteItem" routerLink="/clientes/list"*ngxPermissionsOnly="['ADMIN']">Clientes</a></li>  
                 &nbsp;
                 <li class ="nav-item"><a class ="nav-link" id="concurso-navbar-item" routerLink="/concursos/list">Concursos</a></li>
                 &nbsp;
-                <li class ="nav-item"><a class ="nav-link" id="organizadorsTag" routerLink="/organizadors/list">Organizadores</a></li>
+                <li class ="nav-item"><a class ="nav-link" id="organizadorsTag" routerLink="/organizadors/list"*ngxPermissionsOnly="['ADMIN']">Organizadores</a></li>
                 &nbsp;
                 <li class ="nav-item"><a class ="nav-link" id="calificacion-navbar-item" routerLink="/photos/list">Fotos</a></li>
                 &nbsp;
-                <li class ="nav-item"><a class ="nav-link" id="calificacion-navbar-item" routerLink="/facturas/list">Facturas</a></li>
+                <li class ="nav-item"><a class ="nav-link" id="calificacion-navbar-item" routerLink="/facturas/list"*ngxPermissionsOnly="['ADMIN']">Facturas</a></li>
                 &nbsp;
-                <li class ="nav-item"><a class ="nav-link" id="calificacion-navbar-item" routerLink="/formasDePago/list">Formas De Pago</a></li>
+                <li class ="nav-item"><a class ="nav-link" id="calificacion-navbar-item" routerLink="/formasDePago/list"*ngxPermissionsOnly="['ADMIN']">Formas De Pago</a></li>
                 &nbsp;
               
             </ul>
@@ -58,7 +58,7 @@
     <footer class="footer bg-light" id="footer">
         <div class="container">
             <p class="navbar-text text-center">
-                <img  class="img-fluid" src="../assets/logo.png" >
+                <img  class="img-fluid" src="../assets/logo.png" width='20%' height='20%'> >
             </p>
         </div>
     </footer>
