--- a/src/app/organizador/organizador-detail/organizador-detail.component.html
+++ b/src/app/organizador/organizador-detail/organizador-detail.component.html
@@ -1,7 +1,7 @@
 <div class="panel-body">
   <div class="border margin">
       <p class="h3 p-3">{{organizadorDetail.nombre}}<p> 
-      <img src="{{organizadorDetail.foto}}">
+      <img src="{{organizadorDetail.foto}}" width='215' height='215'>
       <div class="row">
           <div class="col">
               <dl>     
@@ -27,14 +27,10 @@
                     <app-concurso-create (cancel)= "showHideCreate()" (create)="ngOnInit()" *ngIf="showCreate"></app-concurso-create>
                 </div>
         </div>
+        
   </div>
-  <div >
-        <tr *ngFor = "let organizador of organizadors">
-                <td style="cursor: pointer;"> 
-                    <dd style="text-align: center;" routerLink="/organizadors/{{organizador.id}}" ><img src="{{organizador.foto}}"/></dd>
-                </td>
-               
-            </tr>
-     
+  <p class="h3 p-3">Otros Organizadores: <p> 
+  <div *ngFor="let organizador of organizadors">
+        <h4 routerLink="/organizadors/{{organizador.id}}" style="cursor: pointer;"> <img src="{{organizador.foto}}" width='215' height='215'></h4>  
 </div>
 </div>
