--- a/src/app/fotografo/fotografo-list/fotografo-list.component.html
+++ b/src/app/fotografo/fotografo-list/fotografo-list.component.html
@@ -1,59 +1,15 @@
-<div class="pin-layout">
-  <div class="thumbnail">
-      
-    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
-      <br>
-      <div class="row justify-content-center align-self-center">
-          <button [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn"
-              (click)="showHideCreate()">Crear mi perfil</button>
-      </div>
-      <br>
-      <div class="col-md-8">
-          <div *ngIf="showCreate">
-              <app-fotografo-create (cancel)="showHideCreate()" (create)="ngOnInit()" *ngIf="showCreate"></app-fotografo-create>
-          </div>
-      </div>
-      <div class="row justify-content-center align-self-center">
-          <button [ngClass]="{ 'btn-primary': !act, 'btn-danger': act}" type="button" class="btn"
-              (click)="ngOnInit()">Actualizar mi perfil</button>
-      </div>
-      <br>
-      <div class="col-md-9">
-          <div *ngIf="act">
-              <app-fotografo (actualizar)="ngOnInit()" ></app-fotografo>
-          </div>
-      </div>
-      
-    <style>
-      
-      table, th, td{
-        width:100%; 
-        border: 1px solid black;
-        border-collapse: collapse;
-        align-self: center;
-      }
-      th
-    </style>
-    <table >
-        <thead>
-            <tr>
-              <th style="background-color :#4da6ff;text-align: center" class="text-center">Conoce a los fotógrafos</th> </tr>
-        </thead>
-      <tbody>
-        <tr *ngFor = "let fotografo of fotografos">
-            <td style="cursor: pointer;"> 
-                <dd style="text-align: center;" routerLink="/fotografos/{{fotografo.id}}" >{{fotografo.nombre}}</dd>
-            </td>
-            <td>
-                <button class="btn btn-primary" (click)="showHideEdit(fotografo.id)"><span class="far fa-edit"></span></button>
-            </td>
-        </tr>
-    </tbody>
-  </table>
-  <div class="col-md-8">
-        <div *ngIf="showEdit">
-            <app-fotografo-edit [fotografo_id]="fotografo_id" (cancel)="showHideEdit(fotografo_id)" (update)="updateFotografo()"></app-fotografo-edit>
+
+<body>
+         <div class="box" *ngFor = "let fotografo of fotografos">
+      <div class="card">
+        <div class="imgBx">
+           
+            <dd style="text-align: center;" routerLink="/fotografos/{{fotografo.id}}" > <img src='{{fotografo.foto}}' alt="images"></dd>
         </div>
-    </div>
-    </div>
-</div>
+        <div class="details">
+            <h2>{{fotografo.nombre}} {{fotografo.apellido}}<br><span>@{{fotografo.login}}</span></h2>
+        </div>
+      </div>
+      </div>
+    
+</body>
