--- a/src/app/fotografo/fotografo-list/fotografo-list.component.css
+++ b/src/app/fotografo/fotografo-list/fotografo-list.component.css
@@ -9,16 +9,20 @@ body{
     font-family: sans-serif;
   }
   .box{
-    width: 1200px;
-    display: grid;
+   
+    display: block;
+    position: relative;
+    margin: auto;
     overflow: hidden;
     border-radius: 5px;
-    margin: 10px 10px 10px;
     background-size: cover !important;
     -webkit-transition: 0.2s cubic-bezier(0.5, 0, 0.2, 1);
     transition: 0.2s cubic-bezier(0.5, 0, 0.2, 1);
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-gap: 15px;
+  cursor: pointer;
+    margin: 0 40px 40px;
+  background-size: cover !important;
   }
   .card{
     position: relative;
