--- a/src/app/cliente/cliente-delete/cliente-delete.component.html
+++ b/src/app/cliente/cliente-delete/cliente-delete.component.html
@@ -1,3 +1,19 @@
-<p>
-  cliente-delete works!
-</p>
+  <div class="modal" tabindex="-1" role="dialog" id="myModal">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Eliminar</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>¿Esta seguro que desea eliminar la cuenta con login <b>{{clienteDetail.login}}</b> ?</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" (click)="deleteCliente(clienteDetail)">Eliminar</button>
+            <button type="button" class="btn btn-success" data-dismiss="modal">Cancelar</button>
+          </div>
+        </div>
+      </div>
+    </div>
