--- a/src/app/cliente/cliente-list/cliente-list.component.html
+++ b/src/app/cliente/cliente-list/cliente-list.component.html
@@ -1,6 +1,21 @@
 <div class="row">
     <div class="container-fluid col-5">
-        
+        <br>
+        <div class="row justify-content-center align-self-center">
+          
+            <button [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn"
+                (click)="showHideCreate()"> Agregar Cliente <i class="material-icons">
+                    add
+                    </i>
+            </button>
+</div>
+<br>
+<div class="col-md-12">
+    <div *ngIf="showCreate">
+       <app-cliente-create (cancel)="showHideCreate()" (create)="ngOnInit()" *ngIf="showCreate"></app-cliente-create>
+    </div>
+</div>
+
           <table class = "table table-hover">
             <thead class="thead-dark">
               <tr>
