--- a/src/app/fotografo/fotografo-list/fotografo-list.component.html
+++ b/src/app/fotografo/fotografo-list/fotografo-list.component.html
@@ -1,16 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<body>
-  
-         <div class="box" *ngFor = "let fotografo of fotografos">
-      <div class="card">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Cnoce a los fotografos </title>
+      </head>
+
+      
+<div class = body>
+
+
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Muli|Quicksand');
+        </style>
+    <tr>
+        <div class= "textprincipal">Conoce a los fotógrafos</div> 
+    </tr>
+    
+  <br>
+      <div class="row justify-content-center align-self-center">
+          <button [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn"
+              (click)="showHideCreate()">Crear mi perfil</button>
+      </div>
+      <br>
+      <div class="col-md-8">
+          <div *ngIf="showCreate">
+              <app-fotografo-create (cancel)="showHideCreate()" (create)="ngOnInit()" *ngIf="showCreate"></app-fotografo-create>
+          </div>
+      </div>
+
+  <div class="box">
+      <div class="card" *ngFor = "let fotografo of fotografos">
         <div class="imgBx">
-           
             <dd style="text-align: center;" routerLink="/fotografos/{{fotografo.id}}" > <img src='{{fotografo.foto}}' alt="images"></dd>
-        </div>
+         </div>
         <div class="details">
             <h2>{{fotografo.nombre}} {{fotografo.apellido}}<br><span>@{{fotografo.login}}</span></h2>
         </div>
       </div>
-      </div>
     
-</body>
+      
+  </div>
+  
+  
+</div>
+</html>
