--- a/src/app/fotografo/fotografo-list/fotografo-list.component.css
+++ b/src/app/fotografo/fotografo-list/fotografo-list.component.css
@@ -15,6 +15,9 @@
   grid-gap: 15px;
   margin: 0 auto;
 }
+.crea button{
+  background-color: rgb(153, 153, 153);
+}
 .textprincipal{
   font-family: 'Quicksand', sans-serif;
   color: rgb(129, 129, 129);
