--- a/src/app/fotografo/fotografo-list/fotografo-list.component.html
+++ b/src/app/fotografo/fotografo-list/fotografo-list.component.html
@@ -20,8 +20,8 @@
     </tr>
     
   <br>
-      <div class="row justify-content-center align-self-center">
-          <button [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn"
+      <div class="crea">
+          <button  [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn"
               (click)="showHideCreate()">Crear mi perfil</button>
       </div>
       <br>
