--- a/src/app/fotografo/fotografo-list/fotografo-list.component.html
+++ b/src/app/fotografo/fotografo-list/fotografo-list.component.html
@@ -16,20 +16,12 @@
         @import url('https://fonts.googleapis.com/css?family=Muli|Quicksand');
         </style>
     <tr>
-        <div class= "textprincipal">Conoce a los fotógrafos</div> 
+        <div class= "text">.</div> 
+        <div class= "text">.</div> 
+        <div class= "textprincipal"><span>Conoce a los fotógrafos</span></div> 
     </tr>
     
-  <br>
-      <div class="crea">
-          <button  [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn"
-              (click)="showHideCreate()">Crear mi perfil</button>
-      </div>
-      <br>
-      <div class="col-md-8">
-          <div *ngIf="showCreate">
-              <app-fotografo-create (cancel)="showHideCreate()" (create)="ngOnInit()" *ngIf="showCreate"></app-fotografo-create>
-          </div>
-      </div>
+
 
   <div class="box">
       <div class="card" *ngFor = "let fotografo of fotografos">
@@ -44,6 +36,16 @@
       
   </div>
   
-  
+  <br>
+  <div class="crea">
+      <button  [ngClass]="{ 'btn-primary': !showCreate, 'btn-danger': showCreate }" type="button" class="btn"
+          (click)="showHideCreate()">Crear mi perfil</button>
+  </div>
+  <br>
+  <div class="col-md-8">
+      <div *ngIf="showCreate">
+          <app-fotografo-create (cancel)="showHideCreate()" (create)="ngOnInit()" *ngIf="showCreate"></app-fotografo-create>
+      </div>
+  </div>
 </div>
 </html>
