--- a/src/app/interes-fotografico/interes-fotografico-detail/interes-fotografico-detail.component.html
+++ b/src/app/interes-fotografico/interes-fotografico-detail/interes-fotografico-detail.component.html
@@ -1,21 +1,18 @@
-<p>
-  
-<body>
-<h1>#{{interesFotograficoDetail.interes}}</h1>
-</body>
-</p>
-<form name="interesFotografico" (ngSubmit)="f.form.valid && editInteresFotografico()" #f="ngForm" novalidate>
+
+
     <div class="form-group">
-     <label for="interesFotograficoNombre"><b>Nombre</b></label>
-     <input type="text" name="interesFotograficoNombre" class="form-control" id="interesFotograficoNombre" [(ngModel)]="interesFotografico.interes"
-         #interesFotograficoNombre="ngModel" [ngClass]="{ 'is-invalid': f.submitted && interesFotograficoNombre.invalid }" required>
-     <div class="invalid-feedback">
-         <div>No se ha puesto el interes</div>
-     </div>
- </div>
 
-<body>
-Conoce a los fotografos con intereses en {{interesFotograficoDetail.interes}}
+     <div class="interesFotograficoNombre"><b>#{{interesFotograficoDetail.interes}}</b></div>
+     <style>
+            @import url('https://fonts.googleapis.com/css?family=Muli|Quicksand');
+            </style>
+   </div>
 
-</body>
+   
+   <div class="rela-inline image"*ngFor="let photo of interesFotograficoDetail.fotos">
+        <div class="Hola" routerLink="/photos/{{photo.id}}" > <img src='{{photo.rutaFoto}}' alt="images"></div> 
+    
+      </div>
+
+
 
