--- a/src/app/photo/photo-calificacion/photo-calificacion.component.html
+++ b/src/app/photo/photo-calificacion/photo-calificacion.component.html
@@ -1,10 +1,13 @@
-<div id="collapseCalificacion" [ngbCollapse]="isCollapsed">
+
+
+
+
     <table class="table table-striped">
         <tbody>
             <tr *ngFor="let calificacion of photoCalificaciones">
-                <td><span id="photo-calificada"><b>{{calificacion.puntaje}}</b></span>
+                <td> <span id="photo-cliente"><b>{{calificacion.clienteCalificador.nombre}}</b></span>
+                    <span id="photo-calificada"><b>{{calificacion.puntaje}}</b></span>
                     <span>: </span><span id="calificacion-comentario">{{calificacion.comentario}}</span><br></td>
             </tr>
         </tbody>
     </table>
-</div>
