--- a/src/app/interes-fotografico/interes-fotografico-detail/interes-fotografico-detail.component.html
+++ b/src/app/interes-fotografico/interes-fotografico-detail/interes-fotografico-detail.component.html
@@ -1,18 +1,19 @@
 
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Muli|Quicksand');
+</style>
+<div class="form-group">
+    <div class="interesFotograficoNombre">
+        <b>#{{interesFotograficoDetail.interes}}</b>
+    </div>
+</div>
 
-    <div class="form-group">
+<div class="rela-inline image"*ngFor="let photo of interesFotograficoDetail.fotos">
+    <div class="Hola" routerLink="/photos/{{photo.id}}" > 
+        <img src='{{photo.rutaFoto}}' alt="images">
+    </div> 
 
-     <div class="interesFotograficoNombre"><b>#{{interesFotograficoDetail.interes}}</b></div>
-     <style>
-            @import url('https://fonts.googleapis.com/css?family=Muli|Quicksand');
-            </style>
-   </div>
-
-   
-   <div class="rela-inline image"*ngFor="let photo of interesFotograficoDetail.fotos">
-        <div class="Hola" routerLink="/photos/{{photo.id}}" > <img src='{{photo.rutaFoto}}' alt="images"></div> 
-    
-      </div>
+</div>
 
 
 
